Create Editie entity + refactoring Divizie